
Thanks!

2.0.0.2008 (BETA 2)
-------------------
- Added final Swedish localisation changes for beta 2.
- Fixed French localisation import error.
- Fix bug with importing OPML files.
- Added 'group folder', 'smart folder' and 'rss folder' attributes to folder class in scripting.
- Added Restore command to restore an article in the Trash Folder back to where it came from.

2.0.0.2007
----------
- You can now undo/redo Mark All Read, even across multiple folders.
- Article view split bar position is now properly persisted across sessions.
- Disabled proportional folder and article list split bar resizing when the main window is resized.
- Selecting multiple articles now shows multiple articles in the article pane.
- Fixed problem when parsing feeds from http://macintouch.com/rss.xml. Some servers report an
  error unless the User-agent field is specified in the HTTP header.
- Added built-in browser support. Web pages can now be opened in Vienna in separate tabs as an
  option. Next and Previous Tab commands added to the Window menu. Close Tab added to the File
  menu. Right-click popup menu allows links or pages to be opened externally.
- Added option in Preferences to open web pages in Vienna.
- Close Window command changed to Shift+Command+W when tabs are open for consistency with
  Camino and Safari.
- Fixed a bug that screwed up sorting by the read column.
- Improved printing of articles.
- Can undo moving folders in the folders list pane.
- Several improvements to AppleScript interface: new attributes and fixed some bugs.
- Added Cmd+U for next unread since Spacebar doesn't work from the web view.

2.0.0.2006
----------
- Can now sort and double-click activity log items.
- Added option to set the minimum font size in the article display pane.
- Search field now searches article titles as well as the text.
- New application icon. (Thanks to Jasper Hauser - http://www.jasperhauser.nl/icon/).
- Added French localisation. (Thanks to Cyril Gautrias).